Cambio de nombre para obtener si el usuario está en una partida por conflicto con el namespace de socket.io
